--- a/css1/style1.css
+++ b/css1/style1.css
@@ -1,7 +1,7 @@
 body{
     font-size: large;
     font-family: 'Times New Roman', Times, serif;
-    background-color: transparent;
+    background-color: #ECF2FF;
 }
 
 .table1,th,td{
@@ -12,6 +12,7 @@ body{
     margin-right: auto;
     margin-left: auto;
     border-collapse: collapse;
+    position: sticky;
 }
 
 .odev{   
@@ -21,7 +22,7 @@ font-family: 'Courier New', Courier, monospace;
 }
 
 .social{
-    width: 200px;
+    width: 99%;
     display: flex;
     padding: 10px;
     border-radius: 10px;
@@ -30,9 +31,9 @@ font-family: 'Courier New', Courier, monospace;
 }
 
 .social >a{
-    width: 25%;
+    width: 32%;
     font-size: 2rem;
-    height: 50px;
+    height: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,3 +53,7 @@ font-family: 'Courier New', Courier, monospace;
     transform: translateY(-10px);
     
 }
+
+ion-icon {
+    color: rgb(0, 0, 255);
+  }
